--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>Micardium koupit levně. Ceny, recenze. Micardium Objednat nyní! </title>
+    <title>HYPERTON FORTE koupit levně. Ceny, recenze. HYPERTON FORTE Objednat nyní! </title>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/new_css.css" />
@@ -218,7 +218,7 @@
     <section class="helps" id="about">
         <div class="helps__top bg animate-block">
             <div class="container">
-                <h2 class="title helps__title ">Micardium pomáhá <span class="text-under"> zapomenout
+                <h2 class="title helps__title ">HYPERTON FORTE pomáhá <span class="text-under"> zapomenout
                         na vysoký krevní tlak</span> </h2>
                 <p class="helps__text ">Vědci si dali za úkol vyvinout přípravek na přírodní bázi, který by byl účinný
                     bez vedlejších účinků (jako mnoho syntetických léčiv). Při svém výzkumu se zaměřili na extrakt z
@@ -287,7 +287,7 @@
     </section>
     <section class="solve block animate-block">
         <div class="container">
-            <h2 class="title solve__title ">Micardium - <span class="text-under">komplexní
+            <h2 class="title solve__title ">HYPERTON FORTE - <span class="text-under">komplexní
                     řešení</span> vysokého krevního tlaku!</h2>
             <ul class="solve__list">
                 <li class="solve__item ">Pomáhá eliminovat bolesti hlavy </li>
@@ -310,11 +310,11 @@
             <div class="doc__item doc__item--1">
                 <div class="doc__wrap">
                     <p class="doc__text ">S hypertenzí se potýkám již více než 40 let.
-                        MicardiumVypozoroval jsem, že asi 70 % pacientů s touto diagnózou do pěti let
+                        HYPERTON FORTE Vypozoroval jsem, že asi 70 % pacientů s touto diagnózou do pěti let
                         umírá - protože když krevní tlak stoupne, jednoduše se "srazí" prášky, aniž by se řešila
                         příčina. Když mi byl ukázán , pečlivě jsem prostudoval jeho složení a uvědomil si, že konečně
                         vznikl přípravek, který pomůže nejen snížit krevní tlak, ale také se vysokého krevního tlaku
-                        nadobro zbavit! Micardium Nyní doporučuji všem, kteří trpí vysokým krevním
+                        nadobro zbavit! HYPERTON FORTE Nyní doporučuji všem, kteří trpí vysokým krevním
                         tlakem, aby užívali lék. Výsledky jsou úžasné: 8 z 10 mých pacientů se dokázalo zbavit příznaků
                         vysokého krevního tlaku!</p>
 
@@ -334,7 +334,7 @@
                     <p class="doc__text">Nevýhodou většiny syntetických antihypertenzivních tablet je, že mají agresivní
                         účinek na tělo. Téměř okamžitě tedy snižují krevní tlak, ale ten se pak poměrně rychle opět
                         zvyšuje. To vede k rychlému zhoršení stavu cévních stěn, což může způsobit vážné problémy,
-                        včetně prasknutí cévní stěny, což je smrtelný stav. MicardiumNa druhou stranu
+                        včetně prasknutí cévní stěny, což je smrtelný stav. HYPERTON FORTE Na druhou stranu
                         je velmi jemný a postupný a má kumulativní účinek.</p>
                     <h3 class="doc__name">ADAM DÝCHÁ,</h3>
                     <p class="doc__pos">Člen Laboratoře pro výzkum srdce, vědec. Napsal 35 výzkumných prací o vlivu
@@ -423,7 +423,7 @@
     </div>
     <section class="composition block animate-block" id="composition">
         <div class="container">
-            <h2 class="title composition__title ">Micardium                Hlavní <span class="text-under">složky</span> </h2>
+            <h2 class="title composition__title ">HYPERTON FORTE                Hlavní <span class="text-under">složky</span> </h2>
             <div class="composition__wrapper bg ">
                 <ul class="composition__list composition-list">
                     <li class="composition-list__item composition-list__item--1">
@@ -487,14 +487,14 @@
     <section class="feat block bg animate-block ">
         <div class="container">
             <h2 class="title feat__title "><span class="text-under">Jeho účinnost je prokázána!</span> </h2>
-            <h3 class="feat__subtitle ">Micardium Odborníci ve studii analyzovali účinky a další
+            <h3 class="feat__subtitle ">HYPERTON FORTE Odborníci ve studii analyzovali účinky a další
                 populární léky proti hypertenzi. Studie se zúčastnilo 23 000 osob s vysokým krevním tlakem.</h3>
             <div class="feat__table ">
                 <div class="tr">
                     <div class="td th col-effect"> </div>
                     <div class="td th col-prod-1 col-prod">DALŠÍ LÉKÁRENSKÉ PRODUKTY</div>
                     <div class="td th col-prod-2 col-prod">Bisoprolol</div>
-                    <div class="td th col-prod-3 col-prod">Micardium</div>
+                    <div class="td th col-prod-3 col-prod">HYPERTON FORTE</div>
                 </div>
                 <div class="tr col-effect--land">
                     <div class="td">Snížení krevního tlaku na úroveň odpovídající věku.</div>
@@ -546,7 +546,7 @@
     </section>
     <section class="dynamics block animate-block">
         <div class="container">
-            <h2 class="title dynamics__title ">Micardium D <span class="text-under">ynamika
+            <h2 class="title dynamics__title ">HYPERTON FORTE D <span class="text-under">ynamika
                     zlepšení</span> při užívání </h2>
             <div class="dynamics__wrapper ">
                 <picture>
@@ -591,7 +591,7 @@
     </section>
     <section class="reviews block bg animate-block " id="reviews">
         <div class="container">
-            <h2 class="title reviews__title ">Micardium<span class="text-under">Komentáře od</span>
+            <h2 class="title reviews__title ">HYPERTON FORTE<span class="text-under">Komentáře od</span>
             </h2>
             <ul class="reviews__list reviews-list ">
                 <li class="reviews-list__item ">
@@ -600,7 +600,7 @@
                     <h2 class="reviews-list__name">Katalin</h2>
                     <p class="reviews-list__city">Ostrava </p><span class="reviews-list__rate"></span>
                     <p class="reviews-list__text">Ve svých 68 letech byl silně medikován. Problémem však bylo, že mu
-                        příliš nepomáhaly. Ať už jsem je bral, nebo ne, účinek byl stejný. Micardium                        Kolísal mi krevní tlak, byl jsem trochu nervózní a strávil jsem den v posteli, abych se zotavil.
+                        příliš nepomáhaly. Ať už jsem je bral, nebo ne, účinek byl stejný. HYPERTON FORTE                        Kolísal mi krevní tlak, byl jsem trochu nervózní a strávil jsem den v posteli, abych se zotavil.
                         Doporučila mi je sousedka , brala je také a kdykoli ji vidím, vždycky jí děkuji! Zapomněla jsem,
                         co je to vysoký krevní tlak a bolesti hlavy. Letos jsem dokonce sama bez pomoci dětí udělala
                         zahradu!</p><button class="reviews-list__more">Všechny komentáře...</button>
@@ -610,7 +610,7 @@
                     </picture>
                     <h2 class="reviews-list__name">Norbert</h2>
                     <p class="reviews-list__city">Plzeň </p><span class="reviews-list__rate"></span>
-                    <p class="reviews-list__text">Micardium Po dalším záchvatu mě manželka přivedla a
+                    <p class="reviews-list__text">HYPERTON FORTE Po dalším záchvatu mě manželka přivedla a
                         doslova mě donutila, abych si ho vzal. Posledního půl roku jsem nemohl ani rychle chodit, natož
                         běhat! Okamžitě mi začalo silně bušit srdce a všechno se mi promítlo před očima. Všude jsem s
                         sebou nosil tonometr. Teď mám tlak jako třicátník! </p>
@@ -632,10 +632,10 @@
                     </picture>
                     <h2 class="reviews-list__name">Mikl&oacute;s</h2>
                     <p class="reviews-list__city">Pardubice</p><span class="reviews-list__rate"></span>
-                    <p class="reviews-list__text">MicardiumMoje první zkušenost byla neúspěšná. Koupil
+                    <p class="reviews-list__text">HYPERTON FORTE Moje první zkušenost byla neúspěšná. Koupil
                         jsem si ji z falešných webových stránek, provedl léčbu a nezaznamenal žádný účinek. Řekl jsem to
                         příteli, který mi řekl, abych si koupil pouze z místa, kde můžete zkontrolovat pravost výrobku.
-                        Micardium Nyní si uvědomuji, že jsem poprvé dostal pouze falešný výrobek! Když
+                        HYPERTON FORTE Nyní si uvědomuji, že jsem poprvé dostal pouze falešný výrobek! Když
                         jsem provedl skutečnou léčbu , účinek byl pozoruhodný. </p><button
                         class="reviews-list__more">Všechny komentáře...</button>
                 </li>
@@ -646,7 +646,7 @@
                     <p class="reviews-list__city">Chomutov</p><span
                         class="reviews-list__rate reviews-list__rate--4"></span>
                     <p class="reviews-list__text">Mám cukrovku, která způsobuje vysoký krevní tlak, a nemohu užívat
-                        mnoho léků kvůli riziku vedlejších účinků. Micardium Proto jsem si před jeho
+                        mnoho léků kvůli riziku vedlejších účinků. HYPERTON FORTE Proto jsem si před jeho
                         koupí pečlivě prostudovala informace o něm a ptala se nejen na internetu, ale i u odborníků,
                         které znám. Od léčby uplynulo šest měsíců a cítím se skvěle! Můj krevní tlak už není problém.
                     </p><button class="reviews-list__more">Všechny komentáře...</button>
@@ -670,7 +670,7 @@
                     <p class="reviews-list__city">Louny</p><span class="reviews-list__rate"></span>
                     <p class="reviews-list__text">Nemohl jsem si snížit cholesterol, držel jsem speciální dietu a
                         polykal hrst prášků: bez výsledku! Cítila jsem se mizerně, krevní tlak jsem měla vysoký už léta.
-                        MicardiumKoupila jsem si je spíš ze zoufalství než z čehokoli jiného. A zabralo
+                        HYPERTON FORTE Koupila jsem si je spíš ze zoufalství než z čehokoli jiného. A zabralo
                         to! Po léčbě jsem měl cholesterol 4,8! Cítím se jako živý! </p><button
                         class="reviews-list__more">Všechny komentáře...</button>
                 </li>
@@ -681,7 +681,7 @@
                     <p class="reviews-list__city">Karlovy Vary</p><span class="reviews-list__rate"></span>
                     <p class="reviews-list__text">Mám velmi stresující zaměstnání a jsem neustále ve stresu a obavách.
                         Hledala jsem produkt, který by byl nejen účinný, ale také se snadno používal. Během dne, kdy
-                        pracuji, není užívání kapslí příliš praktické. MicardiumMusím je užívat pouze
+                        pracuji, není užívání kapslí příliš praktické. HYPERTON FORTE Musím je užívat pouze
                         ráno a večer, což je výhodné. A účinek je přesně takový, jaký jsem chtěl: nyní dobře spím a
                         cítím se méně frustrovaný svými problémy. </p><button class="reviews-list__more">Všechny
                         komentáře...</button>
@@ -692,7 +692,7 @@
                     <h2 class="reviews-list__name">Peter</h2>
                     <p class="reviews-list__city">Ústí nad Labem</p><span class="reviews-list__rate"></span>
                     <p class="reviews-list__text">Moje teta a babička zemřely na vysoký krevní tlak a nedávno tento
-                        "tichý zabiják" zabil mého otce. Micardium V jednu chvíli byl naživu a v
+                        "tichý zabiják" zabil mého otce. HYPERTON FORTE V jednu chvíli byl naživu a v
                         pořádku, v další se zhroutil a zemřel na infarkt. Dodržoval jsem režim, který posiloval mé cévy
                         a stabilizoval můj krevní tlak. Domnívám se, že v mém případě není léčba normálního krevního
                         tlaku výstřelek, ale nutnost.</p><button class="reviews-list__more">Všechny
@@ -703,7 +703,7 @@
     </section>
     <section class="use block bg animate-block ">
         <div class="container">
-            <h2 class="title use__title ">Micardium <span class="text-under">Zaregistrujte se na
+            <h2 class="title use__title ">HYPERTON FORTE <span class="text-under">Zaregistrujte se na
                     adrese</span> </h2>
             <ul class="use__list use-list">
                 <li class="use-list__item ">
@@ -721,7 +721,7 @@
 
     <section class="order block--bottom animate-block"><span class="order__anchor" id="order"></span>
         <div class="container">
-            <h2 class="title order__title ">Micardium <span class="text-under">objednávání z</span>
+            <h2 class="title order__title ">HYPERTON FORTE <span class="text-under">objednávání z</span>
             </h2>
             <ul class="order__list order-list">
                 <li class="order-list__item ">
